--- a/_config.yml
+++ b/_config.yml
@@ -25,20 +25,17 @@ google_analytics_key: UA-67237593-6 ## put YOUR key here to enable tracking! (bl
 
 ### template colors, used site-wide via css ###
 colors:
-  white:        '#ffffff'
+  white:        '#f0f0f0'
   grey :        '#696969'
   yellow:       '#fef99c'
-  intro:        '#2c2a2b'
-  description:  '#428bca'
-  challenges:   '#ec7850'
-  allmonth:     '#ff9999'
-  firstweek:    '#ff8484'
-  secondweek:   '#ff7070'
-  thirdweek:    '#ff5b5b'
-  fourthweek:   '#ff4747'
-  contacts:     '#ff3333'
-  friday:       '#415992'
-  saturday:     '#39479b'
+  intro:        '#70161a'
+  description:  '#8b161c'
+  allmonth:     '#93281d'
+  firstweek:    '#9b3f1f'
+  secondweek:   '#9b511f'
+  thirdweek:    '#96640e'
+  fourthweek:   '#9c731a'
+  contacts:     '#424242'
 
 kramdown:
   auto_ids:  false
