contributions section: removed wrappers. still missing imgs tho

--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -1,10 +1,10 @@
 contributions:
   - title: Árvores de Natal
-    image: retro.png
+    image: christmas-tree.ico
     text: Vais encontrar diversas árvores de natal dispersas em posições estratégicas da Universidade onde poderás deixar as tuas oferendas.
 
   - title: Contribuições
-    image: retro.png
+    image: gift.png
     text: Podes contribuir com bens alimentares, peças de vestuário ou brinquedos, fica ao teu critério!  
 
 firstweek:
