--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -20,7 +20,7 @@ firstweek:
     date: 5 de Dezembro
     time: 10h
     place: Sala do NEOUM
-    image: activities/SBV.jpeg
+    image: activities/sbv.jpeg
     org: <a target="_blank" href="https://www.facebook.com/nucleoed/">NEDUM</a>
     text: O NEOUM e o NEDUM, em parceria com o INEM, vão proporcionar aos interessados, de forma GRATUITA, um Mass Training em Suporte Básico de Vida (SBV). Um Mass Training em Suporte Básico de Vida tem como objectivo, aumentar a consciencialização sobre um ato destinado a salvar vidas.
 
