--- a/_data/agenda.yml
+++ b/_data/agenda.yml
@@ -21,7 +21,7 @@ firstweek:
     time: 10h
     place: Sala do NEOUM
     image: activities/sbv.jpeg
-    org: <a target="_blank" href="https://www.facebook.com/nucleoed/">NEDUM</a>
+    org: <a target="_blank" href="https://www.facebook.com/neouminho">NEOUM</a> <a target="_blank" href="https://www.facebook.com/nucleoed/">NEDUM</a>
     text: O NEOUM e o NEDUM, em parceria com o INEM, vão proporcionar aos interessados, de forma GRATUITA, um Mass Training em Suporte Básico de Vida (SBV). Um Mass Training em Suporte Básico de Vida tem como objectivo, aumentar a consciencialização sobre um ato destinado a salvar vidas.
 
   - title: Palestra MOLDEX 3D
@@ -46,7 +46,7 @@ firstweek:
     date: 6 de Dezembro
     time: TBA
     place: A2 - Departamento de Informática
-    image: activities/cesium.png
+    image: activities/hourofcode.png
     org: <a target="_blank" href="http://cesium.di.uminho.pt">CeSIUM</a>
     typeform: http://cesium.di.uminho.pt/activities/17
     text: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sit amet commodo libero. Praesent consectetur, sem id egestas ullamcorper, turpis ligula maximus lorem, non congue quam mi ut enim. Vivamus eget dictum sem, vitae malesuada erat. Duis et placerat diam, bibendum dapibus tellus. Duis quis laoreet felis. Cras lobortis interdum eros, luctus laoreet ex faucibus id. In et lacus egestas, accumsan metus ac, sollicitudin ante. Aenean eleifend orci vel mollis sagittis. Vestibulum sed aliquam diam, at tincidunt nisl. Phasellus porttitor malesuada hendrerit. Curabitur nibh dolor, iaculis aliquet sagittis eget, vestibulum ac dui. Aenean arcu sapien, ultricies sit amet ipsum ut, accumsan consectetur risus. Duis felis diam, laoreet quis ipsum et, efficitur facilisis sapien.
